se agrego header carousel, contenido central footer

--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
               aria-label="Toggle navigation">
               <span class="navbar-toggler-icon"></span>
             </button>
-            <div class="menu_navegacion col col-md-12 col-sm-12" id="navbarSupportedContent">
+            <div class="menu_navegacion col col-xs-12 col-md-12 col-sm-12" id="navbarSupportedContent">
               <ul class="navbar-nav me-auto mb-2 mb-lg-0">
                 <li class="nav-item">
                   <a class="nav-link active" aria-current="page" href="index.html">Inicio</a>
@@ -79,7 +79,7 @@
         <hr>
         <div class="cards row">
 
-          <div class="card m-4 col col-md-12 col-sm-12" style="width: 18rem;">
+          <div class="card m-4 col col-xs-12 col-md-12 col-sm-12" style="width: 18rem;">
             <img src="./assets/img/pc_01.png" class="card-img-top mt-4" alt="Computador de escritorio">
             <div class="card-body">
               <h5 class="card-title">Todo en uno HP 21</h5>
@@ -96,7 +96,7 @@
             </div>
           </div>
 
-          <div class="card m-4 col col-md-12 col-sm-12" style="width: 18rem;">
+          <div class="card m-4 col col-xs-12 col-md-12 col-sm-12" style="width: 18rem;">
             <img src="./assets/img/pc_2.jpg" class="card-img-top" alt="Computador de escritorio">
             <div class="card-body">
               <h5 class="card-title">Computador Gamer</h5>
@@ -112,7 +112,7 @@
             </div>
           </div>
 
-          <div class="card m-4 col col-md-12 col-sm-12" style="width: 18rem;">
+          <div class="card m-4 col col-xs-12 col-md-12 col-sm-12" style="width: 18rem;">
             <img src="./assets/img/tablet.jpg" class="card-img-top mt-5" alt="Computador de escritorio">
             <div class="card-body">
               <h5 class="card-title">Tablet lenovo</h5>
@@ -128,7 +128,7 @@
             </div>
           </div>
 
-          <div class="card m-4 col col-md-12 col-sm-12" style="width: 18rem;">
+          <div class="card m-4 col col-xs-12 col-md-12 col-sm-12" style="width: 18rem;">
             <img src="./assets/img/pc_04.jpg" class="card-img-top mt-4" alt="Computador de escritorio">
             <div class="card-body">
               <h5 class="card-title">Portátil Acer</h5>
@@ -145,7 +145,7 @@
             </div>
           </div>
 
-          <div class="card m-4 col col-md-12 col-sm-12" style="width: 18rem;">
+          <div class="card m-4 col col-xs-12 col-md-12 col-sm-12" style="width: 18rem;">
             <img src="./assets/img/pc_05.jpg" class="card-img-top mt-3" alt="Computador de escritorio">
             <div class="card-body">
               <h5 class="card-title">Portátil Asus</h5>
