--- a/pages/quienes_somos.html
+++ b/pages/quienes_somos.html
@@ -22,7 +22,7 @@
                   aria-label="Toggle navigation">
                   <span class="navbar-toggler-icon"></span>
                 </button>
-                <div class="menu_navegacion col col-md-12 col-sm-12 text-white" id="navbarSupportedContent">
+                <div class="menu_navegacion col col-md-12 col-sm-12" id="navbarSupportedContent">
                   <ul class="navbar-nav me-auto mb-2 mb-lg-0">
                     <li class="nav-item">
                       <a class="nav-link active" aria-current="page" href="/index.html">Inicio</a>
@@ -43,48 +43,52 @@
                 </div>
               </div>
             </nav>
+
+        <div id="carousel-page2" class="carousel-02 slide" data-bs-ride="carousel">
+          <div class="carousel-inner">
+            <div class="carousel-item active">
+              <img src="../assets/img/impresion_3D.jpg" class="d-block w-100" alt="imagen de impresión 3D">
+            </div>
+            <div class="carousel-item">
+              <img src="../assets/img/camaras-seguridad.jpg" class="d-block w-100" alt="imagen de camaras de seguridad">
+            </div>
+            <div class="carousel-item">
+              <img src="../assets/img/robotica.jpg" class="d-block w-100" alt="proyecto de robotica">
+            </div>
+          </div>
+          <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleControls"
+            data-bs-slide="prev">
+            <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+            <span class="visually-hidden">Previous</span>
+          </button>
+          <button class="carousel-control-next" type="button" data-bs-target="#carouselExampleControls"
+            data-bs-slide="next">
+            <span class="carousel-control-next-icon" aria-hidden="true"></span>
+            <span class="visually-hidden">Next</span>
+          </button>
+        </div>
             
-            <main id="main">
                 <div class="container-fluid">
-                    <div class="row bg-primary">
+                    <div class="row">
+                        <div class="quienes_somos col col-md-6 col-sm-12  border text-center">
+                            <h2>¿Quienes somos?</h2>
+                            <p>Somos una empresa Tech de distribucion de hardware desde nuestra sede en Bogotá
+                            tambien ofrecemos servicio de impresión 3D, instalación de camaras de seguridad para
+                            tu hogar o negocio, contamos con personal capacitado paa identificar tus necesidades
+                            y dar un servicio responsable.</p>
+                        </div
 
-                    </div>
-                </div>
-            </main>
-    
-            <div id="carouselExampleControls" class="carousel slide" data-bs-ride="carousel">
-              <div class="carousel-inner">
-                <div class="carousel-item active">
-                  <img src="../assets/img/impresion_3D.jpg" class="d-block w-100" alt="imagen de impresión 3D">
-                </div>
-                <div class="carousel-item">
-                  <img src="../assets/img/camaras-seguridad.jpg" class="d-block w-100" alt="imagen de camaras de seguridad">
-                </div>
-                <div class="carousel-item">
-                  <img src="../assets/img/robotica.jpg" class="d-block w-100" alt="proyecto de robotica">
-                </div>
-              </div>
-              <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleControls"
-                data-bs-slide="prev">
-                <span class="carousel-control-prev-icon" aria-hidden="true"></span>
-                <span class="visually-hidden">Previous</span>
-              </button>
-              <button class="carousel-control-next" type="button" data-bs-target="#carouselExampleControls"
-                data-bs-slide="next">
-                <span class="carousel-control-next-icon" aria-hidden="true"></span>
-                <span class="visually-hidden">Next</span>
-              </button>
-            </div>
-          </header>
-        </div>
+                        <div class="container-fluid">
+                             <div class="row col-md-6 col-sm-12">
+                                <img src="../assets/img/logotipo.png" class="img-fluid" alt="logo de conceptotec">
+                             </div>
+                        </div>
 
-        <div class="container-fluid">
-            <div class="row">
-                <div class="col">
-                    <igm src="#" alt="imagen de empresa">
-                </div>
-            </div>
-        </div>
+                        <div class="container-fluid">
+                            <div class="row col-md-6 col-sm-12 justify-self-center">
+                               <img src="../assets/img/control-calidad.jpg" class="img-fluid" alt="imagen de control de calidad">
+                            </div>
+                       </div>
 
         <footer id="footer">
             <div class="container-fluid">
