--- a/pages/quienes_somos.html
+++ b/pages/quienes_somos.html
@@ -25,7 +25,7 @@
                 <div class="menu_navegacion col col-md-12 col-sm-12" id="navbarSupportedContent">
                   <ul class="navbar-nav me-auto mb-2 mb-lg-0">
                     <li class="nav-item">
-                      <a class="nav-link active" aria-current="page" href="/index.html">Inicio</a>
+                      <a class="nav-link active" aria-current="page" href="../index.html">Inicio</a>
                     </li>
                     <li class="nav-item">
                       <a class="nav-link" href="../pages/quienes_somos.html">¿Quienes somos?</a>
@@ -34,7 +34,7 @@
                       <a class="nav-link" href="../pages/servicios.html">Servicios</a>
                     </li>
                     <li class="nav-item">
-                      <a class="nav-link" href="./productos.html">Productos</a>
+                      <a class="nav-link" href="../productos.html">Productos</a>
                     </li>
                     <li class="nav-item">
                       <a class="nav-link" href="..//pages/contacto.html">Contacto</a>
@@ -44,45 +44,52 @@
               </div>
             </nav>
 
-        <div id="carousel-page2" class="carousel-02 slide" data-bs-ride="carousel">
-          <div class="carousel-inner">
-            <div class="carousel-item active">
-              <img src="../assets/img/impresion_3D.jpg" class="d-block w-100" alt="imagen de impresión 3D">
+            <div id="carouselExampleControls" class="carousel slide" data-bs-ride="carousel">
+              <div class="carousel-inner">
+                <div class="carousel-item active">
+                  <img src="../assets/img/impresion_3D.jpg" class="d-block w-100" alt="imagen de impresión 3D">
+                </div>
+                <div class="carousel-item">
+                  <img src="../assets/img/camaras-seguridad.jpg" class="d-block w-100" alt="imagen de camaras de seguridad">
+                </div>
+                <div class="carousel-item">
+                  <img src="../assets/img/robotica.jpg" class="d-block w-100" alt="proyecto de robotica">
+                </div>
+              </div>
+              <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleControls"
+                data-bs-slide="prev">
+                <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+                <span class="visually-hidden">Previous</span>
+              </button>
+              <button class="carousel-control-next" type="button" data-bs-target="#carouselExampleControls"
+                data-bs-slide="next">
+                <span class="carousel-control-next-icon" aria-hidden="true"></span>
+                <span class="visually-hidden">Next</span>
+              </button>
             </div>
-            <div class="carousel-item">
-              <img src="../assets/img/camaras-seguridad.jpg" class="d-block w-100" alt="imagen de camaras de seguridad">
-            </div>
-            <div class="carousel-item">
-              <img src="../assets/img/robotica.jpg" class="d-block w-100" alt="proyecto de robotica">
-            </div>
-          </div>
-          <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleControls"
-            data-bs-slide="prev">
-            <span class="carousel-control-prev-icon" aria-hidden="true"></span>
-            <span class="visually-hidden">Previous</span>
-          </button>
-          <button class="carousel-control-next" type="button" data-bs-target="#carouselExampleControls"
-            data-bs-slide="next">
-            <span class="carousel-control-next-icon" aria-hidden="true"></span>
-            <span class="visually-hidden">Next</span>
-          </button>
-        </div>
             
-                <div class="container-fluid">
-                    <div class="row">
-                        <div class="quienes_somos col col-md-12 col-sm-12 text-center">
-                            <h2>¿Quienes somos?</h2>
-                            <p>Somos una empresa Tech de distribucion de hardware desde nuestra sede en Bogotá
-                            tambien ofrecemos servicio de impresión 3D, instalación de camaras de seguridad para
-                            tu hogar o negocio, contamos con personal capacitado paa identificar tus necesidades
-                            y dar un servicio responsable.</p>
-                        </div
+            <div class="container-fluid">
+             
+              <div class="row">
+                <div class="contenido-titulo col mt-4">
+                  <h1>¿Quienes somos?</h1>
+                <p>Somos una empresa que sabe ejecutar el mantenimiento de
+                  tus computadores, impresoras a tinta, ensamblamos tu computador a
+                  tus necesidades, vendemos computadores nuevos o de segunda.
+                  Por otro lado tambien trabajamos por la seguridad de tu hogar o
+                  tu negocio ofreciendo nuestros servico para la instalacion del
+                  sistema de camaras, tambien tenemos servicio de impresión 3D.
+                </p>
+                </div>
+              </div>
 
-                        <div class="imgan02 container-fluid">
-                            <div class="row col-md-12 col-sm-12 justify-content-center">
-                               <img src="../assets/img/control-calidad.jpg" class="img-fluid" alt="imagen de control de calidad">
-                            </div>
-                       </div>
+                <div class="row">
+                  <div class="contenido-imagen col border text-center">
+                    <img class="img-fluid" class="logo_img" src="../assets/img/logotipo_02.jpg" alt="logo de concepto">
+                  </div>
+                </div>
+            </div>
+
 
         <footer id="footer">
             <div class="container-fluid">
