--- a/pages/productos.html
+++ b/pages/productos.html
@@ -1,13 +1,301 @@
 <!DOCTYPE html>
 <html lang="es">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="./css/sytle.css">
+    <link rel="icon" href="../assets/img/favicon.ico">
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet"
+        integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
+    <link rel="stylesheet" href="../css/sytle.css">
     <title>ConceptoTec</title>
 </head>
+
 <body>
-    
+    <div class="container-fluid">
+        <div class="row">
+            <header id="header" class="col col-md-12">
+                <nav class="navbar navbar-expand-lg bg-dark">
+                    <img src="../assets/img/logotipo.png" alt="logo de conceptotec">
+                    <div class="navberQS container-fluid">
+                        <button class="navbar-toggler" type="button" data-bs-toggle="collapse"
+                            data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent"
+                            aria-expanded="false" aria-label="Toggle navigation">
+                            <span class="navbar-toggler-icon"></span>
+                        </button>
+                        <div class="menu_navegacion col col-xs-12 col-md-12 col-sm-12" id="navbarSupportedContent">
+                            <ul class="navbar-nav me-auto mb-2 mb-lg-0">
+                                <li class="nav-item">
+                                    <a class="nav-link active" aria-current="page" href="../index.html">Inicio</a>
+                                </li>
+                                <li class="nav-item">
+                                    <a class="nav-link" href="../pages/quienes_somos.html">¿Quienes somos?</a>
+                                </li>
+                                <li class="nav-item">
+                                    <a class="nav-link" href="../pages/servicios.html">Servicios</a>
+                                </li>
+                                <li class="nav-item">
+                                    <a class="nav-link" href="../pages/productos.html">Productos</a>
+                                </li>
+                                <li class="nav-item">
+                                    <a class="nav-link" href="../pages/contacto.html">Contacto</a>
+                                </li>
+                            </ul>
+                        </div>
+                    </div>
+                </nav>
+
+                <div id="carouselExampleControls" class="carousel slide" data-bs-ride="carousel">
+                    <div class="carousel-inner">
+                        <div class="carousel-item active">
+                            <img src="../assets/img/impresion_3D.jpg" class="d-block w-100"
+                                alt="imagen de impresión 3D">
+                        </div>
+                        <div class="carousel-item">
+                            <img src="../assets/img/camaras-seguridad.jpg" class="d-block w-100"
+                                alt="imagen de camaras de seguridad">
+                        </div>
+                        <div class="carousel-item">
+                            <img src="../assets/img/robotica.jpg" class="d-block w-100" alt="proyecto de robotica">
+                        </div>
+                    </div>
+                    <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleControls"
+                        data-bs-slide="prev">
+                        <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+                        <span class="visually-hidden">Previous</span>
+                    </button>
+                    <button class="carousel-control-next" type="button" data-bs-target="#carouselExampleControls"
+                        data-bs-slide="next">
+                        <span class="carousel-control-next-icon" aria-hidden="true"></span>
+                        <span class="visually-hidden">Next</span>
+                    </button>
+                </div>
+            </header>
+        </div>
+
+        <main id="content-fluid">
+            <section id="productos" class="col-12 mt-5">
+                <h2>Productos</h2>
+                <hr>
+                <div class="cards row">
+
+                    <div class="card m-4 col col-xs-12 col-md-12 col-sm-12" style="width: 18rem;">
+                        <img src="../assets/img/pc_01.png" class="card-img-top mt-4" alt="Computador de escritorio">
+                        <div class="card-body">
+                            <h5 class="card-title">Todo en uno HP 21</h5>
+                            <p class="card-text">
+                                Procesador: INTEL CELERON J4025
+                                Velocidad Procesador: 2.0 GHz a 2.9 GHz
+                                Número de Núcleos: 2
+                                Número Subprocesos: 2
+                                Disco Solido: Unidad de estado sólido PCIe® NVMe™ M.2 de 250GB
+                                Disco Mecanico: 1 Tera (1000gb)
+                                Memoria RAM: 8 GB DDR4
+                                .</p>
+                            <a href="../pages/productos.html" class="btn btn-primary">Ver más</a>
+                        </div>
+                    </div>
+
+                    <div class="card m-4 col col-xs-12 col-md-12 col-sm-12" style="width: 18rem;">
+                        <img src="../assets/img/pc_2.jpg" class="card-img-top" alt="Computador de escritorio">
+                        <div class="card-body">
+                            <h5 class="card-title">Computador Gamer</h5>
+                            <p class="card-text">
+                                MONITOR INCLUIDO: 22 PULGADAS LED RESOLUCION FULL HD CON HDMI & VGA
+                                PROCESADOR: AMD RYZEN ™ 7 5700G.
+                                N.º DE NUCLEOS DE CPU: 8.
+                                N.º DE SUBPROCESOS 16.
+                                RELOJ BASE 3.8GHz.
+                                FRECUENCIA TURBO MAXIMA:HASTA 4.6 GHZ.
+                                .</p>
+                            <a href="../pages/productos.html" class="btn btn-primary ">Ver Más</a>
+                        </div>
+                    </div>
+
+                    <div class="card m-4 col col-xs-12 col-md-12 col-sm-12" style="width: 18rem;">
+                        <img src="../assets/img/tablet.jpg" class="card-img-top mt-5" alt="Computador de escritorio">
+                        <div class="card-body">
+                            <h5 class="card-title">Tablet lenovo</h5>
+                            <p class="card-text">
+                                istema operativo: Android 10.0.
+                                Con procesador Octa-Core Qualcomm Kryo 260 de 2GHz.
+                                Resolución de pantalla de 2000px x 1200px.
+                                Con lector micro-SD.
+                                Cuenta con GPS.
+                                Memoria interna expandible hasta 256 GB con fuente externa.
+                                ..</p>
+                            <a href="../pages/productos.html" class="btn btn-primary">Ver más</a>
+                        </div>
+                    </div>
+
+                    <div class="card m-4 col col-xs-12 col-md-12 col-sm-12" style="width: 18rem;">
+                        <img src="../assets/img/pc_04.jpg" class="card-img-top mt-4" alt="Computador de escritorio">
+                        <div class="card-body">
+                            <h5 class="card-title">Portátil Acer</h5>
+                            <p class="card-text">
+                                Procesador AMD Ryzen 7 5800U
+                                Pantalla 14" FullHD IPS 100% sRGB
+                                Tarjeta gráfica dedicada RTX 3050Ti
+                                16Gb de ram
+                                512Gb SSD NVME
+                                Lector de huellas
+                                Alexa incorporado.
+                            </p>
+                            <a href="../pages/productos.html" class="btn btn-primary">Ver más</a>
+                        </div>
+                    </div>
+
+                    <div class="card m-4 col col-xs-12 col-md-12 col-sm-12" style="width: 18rem;">
+                        <img src="../assets/img/teclado.webp" class="card-img-top mt-3" alt="Computador de escritorio">
+                        <div class="card-body">
+                            <h5 class="card-title">Teclado Mecánico Onikuma</h5>
+                            <p class="card-text">
+                                Teclado profesional para juegos. El diseño, los caracteres y las letras de las teclas
+                                revestidas y de ABS grabado moldeado por inyección no son fáciles de desvanecer.
+                                Resistente al sudor, previene daños en las teclas, mayor durabilidad y respuesta
+                                táctil...</p>
+                            <a href="../pages/productos.html" class="btn btn-primary">Ver más</a>
+                        </div>
+                    </div>
+
+                    <div class="card m-4 col col-xs-12 col-md-12 col-sm-12" style="width: 18rem;">
+                        <img src="../assets/img/teclado_y_,mouse.webp" class="card-img-top mt-3"
+                            alt="Computador de escritorio">
+                        <div class="card-body">
+                            <h5 class="card-title">
+                                Kit de teclado y mouse gamer Redragon</h5>
+                            <p class="card-text">
+                                Kit compuesto por teclado Harpe K503 y mouse Centrophorus M601.
+                                Incluye audífonos y pad mouse.
+                                Teclado de membrana.
+                                Idioma del teclado: Español.
+                                Mouse con sensor óptico y resolución de 3200 dpi.
+                                Periférico con reposa muñeca.
+                                Interfaz de conexión de los dispositivos usb.
+                                Combinación perfecta y completa para cada partida.
+                                Las imágenes pueden ser ilustrativas...
+                            </p>
+                            <a href="../pages/productos.html" class="btn btn-primary">Ver más</a>
+                        </div>
+                    </div>
+
+                    <div class="card m-4 col col-xs-12 col-md-12 col-sm-12" style="width: 18rem;">
+                        <img src="../assets/img/pc_05.jpg" class="card-img-top mt-3" alt="Computador de escritorio">
+                        <div class="card-body">
+                            <h5 class="card-title">Portátil Asus</h5>
+                            <p class="card-text">
+                                Un procesador exclusivo para los gráficos
+                                Su tarjeta gráfica AMD Radeon RX Vega 8 (Ryzen 2000/3000) convierte a este dispositivo
+                                en una gran
+                                herramienta de trabajo para cualquier profesional del diseño. Te permitirá lograr una
+                                gran performance
+                                en todos tus juegos y en otras tareas cotidianas que impliquen procesamiento gráfico..
+                            </p>
+                            <a href="../pages/productos.html" class="btn btn-primary">Ver más</a>
+                        </div>
+                    </div>
+
+                    <div class="card m-4 col col-xs-12 col-md-12 col-sm-12" style="width: 18rem;">
+                        <img src="../assets/img/mouse.webp" class="card-img-top mt-3" alt="Computador de escritorio">
+                        <div class="card-body">
+                            <h5 class="card-title">
+                                Mouse de juego Razer</h5>
+                            <p class="card-text">
+                                Desde 2005 Razer es la marca líder de estilo de vida para jugadores. Ha diseñado y
+                                construido el ecosistema de hardware, software y servicios más grande del mundo. La
+                                ubicación de cada botón y curva de los mouses Razer se crearon para adaptarse
+                                perfectamente a tu mano...
+                            </p>
+                            <a href="#" class="btn btn-primary">Ver más</a>
+                        </div>
+                    </div>
+
+                    <div class="card m-4 col col-xs-12 col-md-12 col-sm-12" style="width: 18rem;">
+                        <img src="../assets/img/cascos.webp" class="card-img-top mt-3" alt="Computador de escritorio">
+                        <div class="card-body">
+                            <h5 class="card-title">
+                                Audífonos gamer Trust</h5>
+                            <p class="card-text">
+                                Experimenta la adrenalina de sumergirte en la escena de otra manera! Tener auriculares
+                                específicos para jugar cambia completamente tu experiencia en cada partida. Con los
+                                Trust Radius no te pierdes ningún detalle y escuchas el audio tal y como fue diseñado
+                                por los creadores...
+                            </p>
+                            <a href="#" class="btn btn-primary">Ver más</a>
+                        </div>
+                    </div>
+
+                    <div class="card m-4 col col-xs-12 col-md-12 col-sm-12" style="width: 18rem;">
+                        <img src="../assets/img/diadema.webp" class="card-img-top mt-3" alt="Computador de escritorio">
+                        <div class="card-body">
+                            <h5 class="card-title">
+                                Audífonos gamer Kotion G2000</h5>
+                            <p class="card-text">
+                                ¡Experimenta la adrenalina de sumergirte en la escena de otra manera! Tener auriculares
+                                específicos para jugar cambia completamente tu experiencia en cada partida. Con los
+                                Kotion G2000 no te pierdes ningún detalle y escuchas el audio tal y como fue diseñado
+                                por los creadores...
+                            </p>
+                            <a href="../pages/productos.html" class="btn btn-primary">Ver más</a>
+                        </div>
+                    </div>
+                </div>
+
+            </section>
+        </main>
+
+        <footer id="footer">
+            <div class="container-fluid">
+
+                <div class="row p-5 pb-2 bg-dark text-white">
+
+                    <div class="col-xs-12 col-md-6 col-lg-3">
+                        <p class="h3 cont-size-20">ConceptoTec</p>
+                        <p>
+                            Somos una empresa Tech de distribucion de hardware desde nuestra sede en Bogotá
+                            tambien ofrecemos servicio de impresión 3D, instalación de camaras de seguridad para
+                            tu hogar o negocio, contamos con personal capacitado paa identificar tus necesidades
+                            y dar un servicio responsable.
+
+                        </p>
+
+                    </div>
+                    <div class="col-xs-12 col-md-6 col-lg-3">
+                        <p class="h5 mb-3">Sobre ConceptoTec</p>
+                        <div class="mb-2">
+                            <a class="text-secondary text-decoration-none" href="#">Terminos y condiciones</a>
+                        </div>
+                        <div class="mb-2">
+                            <a class="text-secondary text-decoration-none" href="#">Politicas de privacidad</a>
+                        </div>
+                    </div>
+                    <div class="col-xs-12 col-md-6 col-lg-3">
+                        <p class="h5 mb-3">Estamos ubicados</p>
+                        <p>Cra 15 # 77 - 02 Barrio Galicia</p>
+                    </div>
+                    <div class="col-xs-12 col-md-6 col-lg-3">
+                        <p class="h5 mb-3">Contacto</p>
+                        <div class="mb-2">
+                            <a class="text-secondary text-decoration-none" href="#">Facebook</a>
+                        </div>
+                        <div class="mb-2">
+                            <a class="text-secondary text-decoration-none" href="#">instagram</a>
+                        </div>
+                        <div class="mb-2">
+                            <p>Whatsapp +573163339112</p>
+                        </div>
+                    </div>
+
+                </div>
+        </footer>
+
+        <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.9.2/dist/umd/popper.min.js"
+            integrity="sha384-IQsoLXl5PILFhosVNubq5LC7Qb9DXgDA9i+tQ8Zj3iwWAwPtgFTxbJ8NT4GN1R8p"
+            crossorigin="anonymous"></script>
+        <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.min.js"
+            integrity="sha384-cVKIPhGWiC2Al4u+LWgxfKTRIcfu0JTxR+EQDz/bgldoEyl4H0zUF0QKbrJ0EcQF"
+            crossorigin="anonymous"></script>
 </body>
+
 </html>
